pamc/src/tests/integration/should_fail/single_file/mod.rs
use super::*;

mod ast_simplification;
mod bind;
mod fun_recursion;
mod lex;
mod parse;
mod positivity;
mod type_check;
mod variant_return_type;
